--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,9 @@ border: 1px solid;
 border-radius: 4px;
 margin-bottom: 20px;
 }
+
+.error {
+  color: red;
+  font-size: 12px;
+  text-align: left;
+}
