--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,11 @@ color: #fff;
 background-image: none;
 border: 1px solid;
 border-radius: 4px;
-margin-bottom: 20px;
+
+}
+
+.form-control {
+  margin-bottom: 20px;
 }
 
 .error {
